# Mini-DB-Server

./: .gitignore  Cargo.toml  LICENSE  README.md  module_config.toml
modules/: README.md
src/: client.rs  connection_manager.rs  error.rs  join_engine.rs  lib.rs  main.rs  modules.rs  parser.rs  query.rs  schema.rs  storage.rs  sync.rs  system_setup.rs  transaction.rs  wasm.rs
src/security/: mod.rs  policy_engine.rs  secure_executor.rs  trigger_system.rs
tests/: bcrypt_password_hashing_test.rs  create_table_test.rs  foreign_key_test.rs  integration_test.rs  join_optimization_test.rs  module_integration_test.rs  parser_test.rs  query_test.rs  schema_test.rs  security_integration_test.rs  simple_test.rs  storage_test.rs  sync_test.rs  transaction_test.rs  wasm_test.rs
user_modules/chat/: Cargo.toml  README.md
user_modules/chat/src/: lib.rs
user_modules/tictactoe/: Cargo.toml  README.md
user_modules/tictactoe/src/: lib.rs
